HomePage first look

--- a/homePage.html
+++ b/homePage.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libertinus+Serif+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <title>Havvanur Karakaya</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logoTitle">
+            <img class="logo" src="images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
+            <h2 class="myName">Havvanur Karakaya</h2>
+            <img class="flag" src="images/turkish flag.png" alt="Türk Bayrağı">
+        </div>
+        <nav class="navbar">
+            <a href="homePage.html" >Home Page</a>
+            <a href="myProjects.html" >My Projects</a>
+            <a href="contactWithMe.html" >Contact With Me</a>
+        </nav>
+    </header>
+
+    <section class="description" id="description">
+        <div class="photoLayer"></div>
+        <div class="descText">
+            <h1 class="introTitle">Hello , I'm Havvanur!</h1>
+            <h3 class="proficient">Software Engineering Student at Izmir University of Economics</h3>
+            <p class="desc">As a software engineering student, I am improving myself in Backend and Web development. I am also interested in Data Science.After
+                developing myself in the sector for a while, I want to do a master's degree in Data Science. 
+                My goal is to be a Data Scientist in the future.</p>
+        </div>
+    </section>
+
+    <section class="educationalinfo" id="educationalinfo">
+        <div class="eduGrid">
+            <div class="education">
+                <h3>2021-Ongoing</h3>
+                <h2>Izmir University of Economics</h2>
+                <h2>Engineering Department</h2>
+                <h2>Software Engineering</h2>
+                <h2>4th Grade</h2>
+                <h4>Expected Graduation Date:June 2026</h4>
+            </div>
+            <div class="expPhoto">
+                <!-- <img class="experiences" src="images/forest_experiences.jpeg" alt="HK Havvanur Karakaya Experiences Forest"> -->
+            </div>
+            <div class="experiences">
+                <div class="sca">
+                    <h3>Sep.2024 - Oct.2024</h3>
+                    <h2>SCA Social - TNC Group</h2>
+                    <h2>Project Management Intern</h2>
+                    <p>As a result of the 4-week training I received in the fields of Basic Management
+                    and Organization, Basic New Media and Digital Transformation, Basic
+                    Advertising and Marketing, and Basic Project Management, I went through a
+                    10-day portfolio preparation process.</p>
+                </div>
+                <div class="destech">
+                    <h3>Aug.2025 - Sep.2025</h3>
+                    <h2>Destech Internet Hizmetleri</h2>
+                    <h2>Software Engineering Intern</h2>
+                    <p>fısdjsıfjd</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="activities" id="activities">
+
+    </section>
+
+    <section class="certificates" id="certificates">
+
+    </section>
+
+    <section class="skills" id="skills">
+
+    </section>
+
+    <section class="referencecontact" id="referencecontact">
+
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
