--- a/homePage.html
+++ b/homePage.html
@@ -18,7 +18,8 @@
         </div>
         <nav class="navbar">
             <a href="homePage.html" >Home Page</a>
-            <a href="myProjects.html" >My Projects</a>
+            <a href="myProjects.html" >Projects</a>
+            <a href="certificates.html">Certificates</a>
             <a href="contactWithMe.html" >Contact With Me</a>
         </nav>
     </header>
@@ -35,7 +36,7 @@
     </section>
 
     <section class="educationalinfo" id="educationalinfo">
-        <div class="eduGrid">
+        <div class="gridEdu">
             <div class="education">
                 <h3>2021-Ongoing</h3>
                 <h2>Izmir University of Economics</h2>
@@ -68,17 +69,81 @@
     </section>
 
     <section class="activities" id="activities">
-
+        <div class="gridActivity">
+            <h2 class="sectionTitle">Activities</h2>
+            <div class="mentor">
+                <h3>Aug.2024 - Dec.2024</h3>
+                <h2>Student Mentor</h2>
+                <h2>Izmir University of Economics</h2>
+                <p>I mentored 12 new Software Engineering students to 
+                    help them adapt to school.</p>
+            </div>
+            <div class="gdg">
+                <h3>Sep.2024 - Oct.2024</h3>
+                <h2>Event and Organization Team Coordinator</h2>
+                <h2>GDG on Campus IUE</h2>
+                <p>I managed the planning and organization of technological and social events
+                    requested in line with Google technologies and members' demands.</p>
+            </div>
+            <div class="ibm">
+                <h3>Nov.2024 - May.2025</h3>
+                <h2>Head of Communcation Coordination(Organization Team)</h2>
+                <h2>IBM Z IUE</h2>
+                <p>I plan and organize the desired technological and social events with my team
+                    in line with IBM technologies and members' demands.</p>
+            </div>
+        </div>
     </section>
 
-    <section class="certificates" id="certificates">
-
+    <section class="extras">
+        <div class="gridExtras">
+            <div class="certificates">
+                <h2>Certificates</h2>
+                <a href="certificates.html">Certificates</a>
+            </div>
+            <div class="skills">
+                <div class="gridSkills">
+                    <h2>Skills</h2>
+                    <div class="computer">
+                        <h3>Computer Skills</h3>
+                        <span>Java</span>
+                        <span>Python</span>
+                        <span>C++</span>
+                        <span>C#</span>
+                        <span>.Net</span>
+                        <span>HTML</span>
+                        <span>Css</span>
+                        <span>Java Script</span>
+                        <span>PHP</span>
+                        <span>MySQL</span>
+                    </div>
+                    <div class="language">
+                        <h3>Language Skills</h3>
+                        <span>Turkish - Native</span>
+                        <span>English - Intermediate</span>
+                        <span>Spanish - Beginner</span>
+                    </div>
+                    <div class="soft">
+                        <h3>Soft Skills</h3>
+                        <span>Teamwork</span>
+                        <span>Project Management</span>
+                        <span>Organization</span>
+                        <span>Crisis Management</span>
+                        <span>Effective Communication</span>
+                    </div>
+                </div>
+            </div>
+            <div class="interests">
+                <h2>Interests</h2>
+                <span>Dance</span>
+                <span>Rock Music(T-Rock)</span>
+                <span>Volleyball</span>
+                <span>Extreme Sports</span>
+                <span>Bodybuilding and Cardio Exercises</span>
+            </div>
+        </div>
     </section>
-
-    <section class="skills" id="skills">
-
-    </section>
-
+    
     <section class="referencecontact" id="referencecontact">
 
     </section>
