--- a/homePage.html
+++ b/homePage.html
@@ -45,8 +45,9 @@
                 <h2>4th Grade</h2>
                 <h4>Expected Graduation Date:June 2026</h4>
             </div>
-            <div class="expPhoto">
-                <!-- <img class="experiences" src="images/forest_experiences.jpeg" alt="HK Havvanur Karakaya Experiences Forest"> -->
+            <div class="projects">
+                <h2>Projects</h2>
+                <a href="myProjects.html">Projects</a>
             </div>
             <div class="experiences">
                 <div class="sca">
@@ -87,7 +88,7 @@
             </div>
             <div class="ibm">
                 <h3>Nov.2024 - May.2025</h3>
-                <h2>Head of Communcation Coordination(Organization Team)</h2>
+                <h2>Head of Communcation Coordination (Organization Team)</h2>
                 <h2>IBM Z IUE</h2>
                 <p>I plan and organize the desired technological and social events with my team
                     in line with IBM technologies and members' demands.</p>
@@ -105,7 +106,7 @@
                 <div class="gridSkills">
                     <h2>Skills</h2>
                     <div class="computer">
-                        <h3>Computer Skills</h3>
+                        <h3>Software Skills</h3>
                         <span>Java</span>
                         <span>Python</span>
                         <span>C++</span>
@@ -116,6 +117,7 @@
                         <span>Java Script</span>
                         <span>PHP</span>
                         <span>MySQL</span>
+                        <span>Scrum/Agile Development</span>
                     </div>
                     <div class="language">
                         <h3>Language Skills</h3>
