--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Css/homepage.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libertinus+Serif+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -12,9 +12,9 @@
 <body>
     <header>
         <div class="logoTitle">
-            <img class="logo" src="images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
+            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
             <h2 class="myName">Havvanur Karakaya</h2>
-            <img class="flag" src="images/turkish flag.png" alt="Türk Bayrağı">
+            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
         </div>
         <nav class="navbar">
             <a href="homePage.html" >Home Page</a>
@@ -151,7 +151,18 @@
     </section>
 
     <footer>
-
+        <h4>@2025 Havvanur Karakaya</h4>
+        <div class="social-links">
+            <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
+                <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
+            </a>
+            <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
+                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+            </a>
+            <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
+                <img class="iconIns" src="../images/instagram.png" alt="Instagram">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
