--- a/pages/myProjects.html
+++ b/pages/myProjects.html
@@ -3,10 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Projects</title>
+    <link rel="stylesheet" href="../Css/projects.css">
+    <title>Certificates</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logoTitle">
+            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
+            <h2 class="myName">Havvanur Karakaya</h2>
+            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
+        </div>
+        <nav class="navbar">
+            <a href="homePage.html" >Home Page</a>
+            <a href="myProjects.html" >Projects</a>
+            <a href="certificates.html">Certificates</a>
+            <a href="contactWithMe.html" >Contact With Me</a>
+        </nav>
+    </header>
+
+    <section class="projectsSec" id="projects">
+        <h2 class="mainTitleProj">My Projects</h2>
+        <div class="projects">
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/Havvanur777/BlueJack77"></a>
+                <h2>BlueJack</h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/Havvanur777/BEST_HOTEL"></a>
+                <h2>Best Hotel</h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/Havvanur777/Machine-Learning-First-Projecct"></a>
+                <h2>First Machine Learning Project</h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/serhatuzunbayir/StudentInternship"></a>
+                <h2>Student Internship</h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/alperozgursahin/PAM-System"></a>
+                <h2>PAM System</h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/denizterziler/SE322-Section1-7"></a>
+                <h2>Buggy</h2>
+                <p></p>
+            </div>
+            <div>
+                <img src="../images/HK LOGO 1.png" alt="">
+                <a href="https://github.com/Havvanur777/MyPersonalWebsite"></a>
+                <h2>My Personal Website</h2>
+                <p></p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h4>@2025 Havvanur Karakaya</h4>
+        <div class="social-links">
+            <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
+                <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
+            </a>
+            <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
+                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+            </a>
+            <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
+                <img class="iconIns" src="../images/instagram.png" alt="Instagram">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
