--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -3,89 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Css/certificates.css">
     <title>Certificates</title>
 </head>
 <body>
+    <header>
+        <div class="logoTitle">
+            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
+            <h2 class="myName">Havvanur Karakaya</h2>
+            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
+        </div>
+        <nav class="navbar">
+            <a href="homePage.html" >Home Page</a>
+            <a href="myProjects.html" >Projects</a>
+            <a href="certificates.html">Certificates</a>
+            <a href="contactWithMe.html" >Contact With Me</a>
+        </nav>
+    </header>
+
     <section class="certificates" id="certificates">
         <div class="certificate">
+            <h2 class="mainTitleCert">Achievement Certificates</h2>
             <div class="success">
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/İş Sağlığı ve Güvenliği Sertifikası.png" alt="">
+                    <h3>Occupational Health and Safety Certificates</h3>
+                    <h2>Izmir University Of Economics</h2>
+                    <h3>Aug.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/Mentorluk Sertifika.jpg" alt="">
+                    <h3>Student Mentorship Certificate</h3>
+                    <h2>Izmir University Of Economics</h2>
+                    <h3>Sep.2024-Dec.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/Aygaz Machine Learning Bootcamp Certificate.png" alt="">
+                    <h3>Machine Learning Bootcamp Certificate</h3>
+                    <h2>Aygaz-Global AI Hub</h2>
+                    <h3>Sep.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/Sca Social.png" alt="">
+                    <h3>Project Management Internship Certificate</h3>
+                    <h2>Sca Social</h2>
+                    <h3>Sep.2024-Oct.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/baugo.png" alt="">
+                    <h3>Equal Opportunity in Technology Program Achievement Certificate</h3>
+                    <h2>BauGo</h2>
+                    <h3>Sep.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/ibm.png" alt="">
+                    <h3>IBM Z Board of Directors Certificate</h3>
+                    <h2>IUE IBM Z Student Club</h2>
+                    <h3>Dec.2024-May.2025</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/kuika.png" alt="">
+                    <h3>Designer 1 Certificate</h3>
+                    <h2>Kuika</h2>
+                    <h3>Dec.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/İEU ÖZGEÇMİŞ HAZIRLAMA TEKNİKLERİ Katılım Belgesi.jpg" alt="">
+                    <h3>Resume Writing Techniques Training Certificate</h3>
+                    <h2>Izmir University Of Economics</h2>
+                    <h3>Nov.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/9-Siber Güvenlik Kampı Sertifika.png" alt="">
+                    <h3>Cyber Security Training Certificate</h3>
+                    <h2>TalentCoders</h2>
+                    <h3>Aug.2025</h3>
                 </div>
             </div>
+            <h2 class="mainTitleCert">Participation Certificates</h2>
             <div class="participation">
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/TECH CAMP Katılım Sertifikası.jpg" alt="">
+                    <h3>Tech Camp Participation Certificate</h3>
+                    <h2>TalentCoders</h2>
+                    <h3>Aug.2024</h3>
                 </div>
                 <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
-                </div>
-                <div>
-                    <img class="" src="" alt="">
-                    <h3></h3>
-                    <h2></h2>
-                    <h3></h3>
+                    <img src="../images/Certificates/BauGo Katılım Sertifikası.png" alt="">
+                    <h3>Equal Opportunity in Technology Program Participation Certificate</h3>
+                    <h2>BauGo</h2>
+                    <h3>Sep.2024</h3>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <h4>@2025 Havvanur Karakaya</h4>
+        <div class="social-links">
+            <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
+                <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
+            </a>
+            <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
+                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+            </a>
+            <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
+                <img class="iconIns" src="../images/instagram.png" alt="Instagram">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
