--- a/pages/contactWithMe.html
+++ b/pages/contactWithMe.html
@@ -3,10 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Css/contact.css">
     <title>Contact</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logoTitle">
+            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
+            <h2 class="myName">Havvanur Karakaya</h2>
+            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
+        </div>
+        <nav class="navbar">
+            <a href="homePage.html" >Home Page</a>
+            <a href="myProjects.html" >Projects</a>
+            <a href="certificates.html">Certificates</a>
+            <a href="contactWithMe.html" >Contact With Me</a>
+        </nav>
+    </header>
+
+    <section class="contactCard">
+        <div class="infos">
+            <h2>Contact With Me</h2>
+            <a href="mailto:karakayahavvanur@gmail.com">karakayahavvanur@gmail.com</a>
+            <a href="tel:+905052813245">0505 281 32 45</a>
+            <h4>Balçova/Izmir</h4>
+            <h4>Döşemealtı/Antalya</h4>
+        </div>
+        <form>
+            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="surname" placeholder="Surname">
+            <input type="tel" name="telno" placeholder="Telephone Number">
+            <input type="email" name="email" placeholder="Email">
+            <input type="text" name="message" placeholder="Your Message">
+            <input type="submit" value="Send">
+        </form>
+    </section>
+
+    <footer>
+        <h4>@2025 Havvanur Karakaya</h4>
+        <div class="social-links">
+            <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
+                <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
+            </a>
+            <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
+                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+            </a>
+            <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
+                <img class="iconIns" src="../images/instagram.png" alt="Instagram">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
