--- a/pages/contactWithMe.html
+++ b/pages/contactWithMe.html
@@ -8,16 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="logoTitle">
-            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
-            <h2 class="myName">Havvanur Karakaya</h2>
-            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
-        </div>
+        <img class="logo" src="../images/Havvanur Karakaya LOGO.png" alt="HK Havvanur Karakaya Logo">
         <nav class="navbar">
             <a href="homePage.html" >Home Page</a>
             <a href="myProjects.html" >Projects</a>
             <a href="certificates.html">Certificates</a>
-            <a href="contactWithMe.html" >Contact With Me</a>
+            <a href="contactWithMe.html" class="active" >Contact</a>
         </nav>
     </header>
 
@@ -25,28 +21,28 @@
         <div class="infos">
             <h2>Contact With Me</h2>
             <a href="mailto:karakayahavvanur@gmail.com">karakayahavvanur@gmail.com</a>
-            <a href="tel:+905052813245">0505 281 32 45</a>
             <h4>Balçova/Izmir</h4>
             <h4>Döşemealtı/Antalya</h4>
         </div>
         <form>
             <input type="text" name="name" placeholder="Name">
             <input type="text" name="surname" placeholder="Surname">
-            <input type="tel" name="telno" placeholder="Telephone Number">
+            <input type="tel" name="telno" placeholder="Phone Number">
             <input type="email" name="email" placeholder="Email">
-            <input type="text" name="message" placeholder="Your Message">
+            <input type="text" name="message" placeholder="Message">
             <input type="submit" value="Send">
         </form>
     </section>
 
     <footer>
         <h4>@2025 Havvanur Karakaya</h4>
+        <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
         <div class="social-links">
             <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
                 <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
             </a>
             <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
-                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+                <img class="iconGit" src="../images/github (2).png" alt="GitHub">
             </a>
             <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
                 <img class="iconIns" src="../images/instagram.png" alt="Instagram">
