--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -11,16 +11,12 @@
 </head>
 <body>
     <header>
-        <div class="logoTitle">
-            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
-            <h2 class="myName">Havvanur Karakaya</h2>
-            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
-        </div>
+        <img class="logo" src="../images/Havvanur Karakaya LOGO.png" alt="HK Havvanur Karakaya Logo">
         <nav class="navbar">
-            <a href="homePage.html" >Home Page</a>
+            <a href="homePage.html" class="active" >Home Page</a>
             <a href="myProjects.html" >Projects</a>
             <a href="certificates.html">Certificates</a>
-            <a href="contactWithMe.html" >Contact With Me</a>
+            <a href="contactWithMe.html" >Contact</a>
         </nav>
     </header>
 
@@ -38,11 +34,11 @@
     <section class="educationalinfo" id="educationalinfo">
         <div class="gridEdu">
             <div class="education">
-                <h3>2021-Ongoing</h3>
-                <h2>Izmir University of Economics</h2>
-                <h2>Engineering Department</h2>
-                <h2>Software Engineering</h2>
-                <h2>4th Grade</h2>
+                <h4>2021-Ongoing</h3>
+                <h2 class="school">Izmir University of Economics</h2>
+                <h3>Engineering Department</h2>
+                <h2 class="field">Software Engineering</h2>
+                <h3>4th Grade</h2>
                 <h4>Expected Graduation Date:June 2026</h4>
             </div>
             <div class="projects">
@@ -52,8 +48,8 @@
             <div class="experiences">
                 <div class="sca">
                     <h3>Sep.2024 - Oct.2024</h3>
-                    <h2>SCA Social - TNC Group</h2>
-                    <h2>Project Management Intern</h2>
+                    <h2 class="company">SCA Social - TNC Group</h2>
+                    <h2 class="role">Project Management Intern</h2>
                     <p>As a result of the 4-week training I received in the fields of Basic Management
                     and Organization, Basic New Media and Digital Transformation, Basic
                     Advertising and Marketing, and Basic Project Management, I went through a
@@ -61,8 +57,8 @@
                 </div>
                 <div class="destech">
                     <h3>Aug.2025 - Sep.2025</h3>
-                    <h2>Destech Internet Hizmetleri</h2>
-                    <h2>Software Engineering Intern</h2>
+                    <h2 class="company">Destech Internet Hizmetleri</h2>
+                    <h2 class="role">Software Engineering Intern</h2>
                     <p>fısdjsıfjd</p>
                 </div>
             </div>
@@ -75,21 +71,21 @@
             <div class="mentor">
                 <h3>Aug.2024 - Dec.2024</h3>
                 <h2>Student Mentor</h2>
-                <h2>Izmir University of Economics</h2>
+                <h2 class="place">Izmir University of Economics</h2>
                 <p>I mentored 12 new Software Engineering students to 
                     help them adapt to school.</p>
             </div>
             <div class="gdg">
                 <h3>Sep.2024 - Oct.2024</h3>
                 <h2>Event and Organization Team Coordinator</h2>
-                <h2>GDG on Campus IUE</h2>
+                <h2 class="place">GDG on Campus IUE</h2>
                 <p>I managed the planning and organization of technological and social events
                     requested in line with Google technologies and members' demands.</p>
             </div>
             <div class="ibm">
                 <h3>Nov.2024 - May.2025</h3>
                 <h2>Head of Communcation Coordination (Organization Team)</h2>
-                <h2>IBM Z IUE</h2>
+                <h2 class="place">IBM Z IUE</h2>
                 <p>I plan and organize the desired technological and social events with my team
                     in line with IBM technologies and members' demands.</p>
             </div>
@@ -107,17 +103,17 @@
                     <h2>Skills</h2>
                     <div class="computer">
                         <h3>Software Skills</h3>
-                        <span>Java</span>
-                        <span>Python</span>
-                        <span>C++</span>
-                        <span>C#</span>
-                        <span>.Net</span>
-                        <span>HTML</span>
-                        <span>Css</span>
-                        <span>Java Script</span>
-                        <span>PHP</span>
-                        <span>MySQL</span>
-                        <span>Scrum/Agile Development</span>
+                        <div class="languages">
+                            <img src="../images/icons/java.png" alt="">
+                            <img src="../images/icons/python.png" alt="">
+                            <img src="../images/icons/c-.png" alt="">
+                            <img src="../images/icons/c-sharp.png" alt="">
+                            <img src="../images/icons/Microsoft_.NET_logo.svg.png" alt="">
+                            <img src="../images/icons/mysql.png" alt="">
+                            <img src="../images/icons/html.png" alt="">
+                            <img src="../images/icons/css-3.png" alt="">
+                            <img src="../images/icons/php.png" alt="">
+                        </div>
                     </div>
                     <div class="language">
                         <h3>Language Skills</h3>
@@ -129,6 +125,7 @@
                         <h3>Soft Skills</h3>
                         <span>Teamwork</span>
                         <span>Project Management</span>
+                        <span>Scrum/Agile Development</span>
                         <span>Organization</span>
                         <span>Crisis Management</span>
                         <span>Effective Communication</span>
@@ -152,12 +149,13 @@
 
     <footer>
         <h4>@2025 Havvanur Karakaya</h4>
+        <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
         <div class="social-links">
             <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
                 <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
             </a>
             <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
-                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+                <img class="iconGit" src="../images/github (2).png" alt="GitHub">
             </a>
             <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
                 <img class="iconIns" src="../images/instagram.png" alt="Instagram">
