--- a/pages/myProjects.html
+++ b/pages/myProjects.html
@@ -8,16 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="logoTitle">
-            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
-            <h2 class="myName">Havvanur Karakaya</h2>
-            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
-        </div>
+        <img class="logo" src="../images/Havvanur Karakaya LOGO.png" alt="HK Havvanur Karakaya Logo">
         <nav class="navbar">
             <a href="homePage.html" >Home Page</a>
-            <a href="myProjects.html" >Projects</a>
+            <a href="myProjects.html" class="active" >Projects</a>
             <a href="certificates.html">Certificates</a>
-            <a href="contactWithMe.html" >Contact With Me</a>
+            <a href="contactWithMe.html" >Contact</a>
         </nav>
     </header>
 
@@ -25,45 +21,45 @@
         <h2 class="mainTitleProj">My Projects</h2>
         <div class="projects">
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/Havvanur777/BlueJack77"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>BlueJack</h2>
+                <a href="https://github.com/Havvanur777/BlueJack77">View Repository</a>
                 <p></p>
             </div>
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/Havvanur777/BEST_HOTEL"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>Best Hotel</h2>
+                <a href="https://github.com/Havvanur777/BEST_HOTEL">View Repository</a>
                 <p></p>
             </div>
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/Havvanur777/Machine-Learning-First-Projecct"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>First Machine Learning Project</h2>
+                <a href="https://github.com/Havvanur777/Machine-Learning-First-Projecct">View Repository</a>
                 <p></p>
             </div>
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/serhatuzunbayir/StudentInternship"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>Student Internship</h2>
+                <a href="https://github.com/serhatuzunbayir/StudentInternship">View Repository</a>
                 <p></p>
             </div>
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/alperozgursahin/PAM-System"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>PAM System</h2>
+                <a href="https://github.com/alperozgursahin/PAM-System">View Repository</a>
                 <p></p>
             </div>
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/denizterziler/SE322-Section1-7"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>Buggy</h2>
+                <a href="https://github.com/denizterziler/SE322-Section1-7">View Repository</a>
                 <p></p>
             </div>
             <div>
-                <img src="../images/HK LOGO 1.png" alt="">
-                <a href="https://github.com/Havvanur777/MyPersonalWebsite"></a>
+                <img src="../images/Havvanur Karakaya LOGO.png" alt="">
                 <h2>My Personal Website</h2>
+                <a href="https://github.com/Havvanur777/MyPersonalWebsite">View Repository</a>
                 <p></p>
             </div>
         </div>
@@ -71,12 +67,13 @@
 
     <footer>
         <h4>@2025 Havvanur Karakaya</h4>
+        <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
         <div class="social-links">
             <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
                 <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
             </a>
             <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
-                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+                <img class="iconGit" src="../images/github (2).png" alt="GitHub">
             </a>
             <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
                 <img class="iconIns" src="../images/instagram.png" alt="Instagram">
