--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -8,16 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="logoTitle">
-            <img class="logo" src="../images/HK LOGO 1.png" alt="HK Havvanur Karakaya Logo">
-            <h2 class="myName">Havvanur Karakaya</h2>
-            <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
-        </div>
+        <img class="logo" src="../images/Havvanur Karakaya LOGO.png" alt="HK Havvanur Karakaya Logo">
         <nav class="navbar">
             <a href="homePage.html" >Home Page</a>
             <a href="myProjects.html" >Projects</a>
-            <a href="certificates.html">Certificates</a>
-            <a href="contactWithMe.html" >Contact With Me</a>
+            <a href="certificates.html" class="active">Certificates</a>
+            <a href="contactWithMe.html" >Contact</a>
         </nav>
     </header>
 
@@ -100,12 +96,13 @@
 
     <footer>
         <h4>@2025 Havvanur Karakaya</h4>
+        <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
         <div class="social-links">
             <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
                 <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
             </a>
             <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
-                <img class="iconGit" src="../images/github-sign.png" alt="GitHub">
+                <img class="iconGit" src="../images/github (2).png" alt="GitHub">
             </a>
             <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
                 <img class="iconIns" src="../images/instagram.png" alt="Instagram">
