header, footer and js

--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/certificates.css">
+    <link rel="stylesheet" href="../Css/headerFooter.css">
     <title>Certificates</title>
 </head>
 <body>
-    <header>
-        <img class="logo" src="../images/Havvanur Karakaya LOGO.png" alt="HK Havvanur Karakaya Logo">
-        <nav class="navbar">
-            <a href="homePage.html" >Home Page</a>
-            <a href="myProjects.html" >Projects</a>
-            <a href="certificates.html" class="active">Certificates</a>
-            <a href="contactWithMe.html" >Contact</a>
-        </nav>
-    </header>
+    <div id="header"></div>
 
     <section class="certificates" id="certificates">
         <div class="certificate">
@@ -94,20 +87,12 @@
         </div>
     </section>
 
-    <footer>
-        <h4>@2025 Havvanur Karakaya</h4>
-        <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
-        <div class="social-links">
-            <a class="LinkedIn" href="https://www.linkedin.com/in/havvanurkarakaya/" target="_blank">
-                <img class="iconLink" src="../images/linkedin.png" alt="LinkedIn">
-            </a>
-            <a class="GitHub" href="https://github.com/Havvanur777" target="_blank">
-                <img class="iconGit" src="../images/github (2).png" alt="GitHub">
-            </a>
-            <a class="Instagram" href="https://www.instagram.com/havvanurk7?igsh=MWdiaHJ6amk0NmpibA==" target="_blank">
-                <img class="iconIns" src="../images/instagram.png" alt="Instagram">
-            </a>
-        </div>
-    </footer>
+    <div id="footer"></div>
+
+    <div class="image-popup" id="imagePopup">
+      <img src="" alt="popup">
+    </div>
+
+    <script src="../Js/layout.js"></script>
 </body>
 </html>
