--- a/pages/footer.html
+++ b/pages/footer.html
@@ -3,19 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="headerFooter.css">
     <title>Document</title>
 </head>
 <body>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../Css/homepage.css">
-        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Libertinus+Serif+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <title>Havvanur Karakaya</title>
-    </head>
-
     <footer>
         <h4>@2025 Havvanur Karakaya</h4>
         <img class="flag" src="../images/turkish flag.png" alt="Türk Bayrağı">
